airflow/logs/scheduler/2022-07-28/mydag.py.log
[2022-07-28 19:51:04,676] {processor.py:153} INFO - Started process (PID=1232) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:51:04,676] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:51:04,676] {logging_mixin.py:115} INFO - [2022-07-28 19:51:04,676] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:51:04,678] {logging_mixin.py:115} INFO - [2022-07-28 19:51:04,677] {dagbag.py:320} ERROR - Failed to import: /home/lemon/airflow/dags/mydag.py
Traceback (most recent call last):
  File "/home/lemon/airflow/airflowenv/lib/python3.8/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 848, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/lemon/airflow/dags/mydag.py", line 1, in <module>
    import numpy
ModuleNotFoundError: No module named 'numpy'
[2022-07-28 19:51:04,678] {processor.py:653} WARNING - No viable dags retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:51:04,690] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.016 seconds
[2022-07-28 19:51:36,460] {processor.py:153} INFO - Started process (PID=1487) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:51:36,460] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:51:36,461] {logging_mixin.py:115} INFO - [2022-07-28 19:51:36,461] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:51:36,462] {logging_mixin.py:115} INFO - [2022-07-28 19:51:36,461] {dagbag.py:320} ERROR - Failed to import: /home/lemon/airflow/dags/mydag.py
Traceback (most recent call last):
  File "/home/lemon/airflow/airflowenv/lib/python3.8/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 848, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/lemon/airflow/dags/mydag.py", line 1, in <module>
    import numpy
ModuleNotFoundError: No module named 'numpy'
[2022-07-28 19:51:36,462] {processor.py:653} WARNING - No viable dags retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:51:36,473] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.014 seconds
[2022-07-28 19:52:32,597] {processor.py:153} INFO - Started process (PID=1687) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:52:32,598] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:52:32,598] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,598] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:52:32,608] {processor.py:651} INFO - DAG(s) dict_keys(['my_dag']) retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:52:32,648] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,647] {manager.py:508} INFO - Created Permission View: can edit on DAG:my_dag
[2022-07-28 19:52:32,657] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,657] {manager.py:508} INFO - Created Permission View: can read on DAG:my_dag
[2022-07-28 19:52:32,665] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,665] {manager.py:508} INFO - Created Permission View: can delete on DAG:my_dag
[2022-07-28 19:52:32,665] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,665] {dag.py:2379} INFO - Sync 1 DAGs
[2022-07-28 19:52:32,670] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,670] {dag.py:2398} INFO - Creating ORM DAG for my_dag
[2022-07-28 19:52:32,675] {logging_mixin.py:115} INFO - [2022-07-28 19:52:32,675] {dag.py:2927} INFO - Setting next_dagrun for my_dag to 2022-07-27T00:00:00+00:00, run_after=2022-07-28T00:00:00+00:00
[2022-07-28 19:52:32,690] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.094 seconds
[2022-07-28 19:53:05,268] {processor.py:153} INFO - Started process (PID=1995) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:53:05,276] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:53:05,276] {logging_mixin.py:115} INFO - [2022-07-28 19:53:05,276] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:53:05,283] {processor.py:651} INFO - DAG(s) dict_keys(['my_dag']) retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:53:05,290] {logging_mixin.py:115} INFO - [2022-07-28 19:53:05,290] {dag.py:2379} INFO - Sync 1 DAGs
[2022-07-28 19:53:05,300] {logging_mixin.py:115} INFO - [2022-07-28 19:53:05,300] {dag.py:2927} INFO - Setting next_dagrun for my_dag to 2022-07-28T00:00:00+00:00, run_after=2022-07-29T00:00:00+00:00
[2022-07-28 19:53:05,309] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.042 seconds
[2022-07-28 19:53:38,234] {processor.py:153} INFO - Started process (PID=2367) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:53:38,235] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:53:38,235] {logging_mixin.py:115} INFO - [2022-07-28 19:53:38,235] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:53:38,244] {processor.py:651} INFO - DAG(s) dict_keys(['my_dag']) retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:53:38,250] {logging_mixin.py:115} INFO - [2022-07-28 19:53:38,250] {dag.py:2379} INFO - Sync 1 DAGs
[2022-07-28 19:53:38,260] {logging_mixin.py:115} INFO - [2022-07-28 19:53:38,260] {dag.py:2927} INFO - Setting next_dagrun for my_dag to 2022-07-28T00:00:00+00:00, run_after=2022-07-29T00:00:00+00:00
[2022-07-28 19:53:38,270] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.036 seconds
[2022-07-28 19:54:08,984] {processor.py:153} INFO - Started process (PID=2500) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:54:08,992] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:54:08,992] {logging_mixin.py:115} INFO - [2022-07-28 19:54:08,992] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:54:09,001] {processor.py:651} INFO - DAG(s) dict_keys(['my_dag']) retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:54:09,008] {logging_mixin.py:115} INFO - [2022-07-28 19:54:09,008] {dag.py:2379} INFO - Sync 1 DAGs
[2022-07-28 19:54:09,023] {logging_mixin.py:115} INFO - [2022-07-28 19:54:09,023] {dag.py:2927} INFO - Setting next_dagrun for my_dag to 2022-07-28T00:00:00+00:00, run_after=2022-07-29T00:00:00+00:00
[2022-07-28 19:54:09,033] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.050 seconds
[2022-07-28 19:54:41,357] {processor.py:153} INFO - Started process (PID=2533) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:54:41,365] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:54:41,366] {logging_mixin.py:115} INFO - [2022-07-28 19:54:41,366] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:54:41,367] {logging_mixin.py:115} INFO - [2022-07-28 19:54:41,366] {dagbag.py:320} ERROR - Failed to import: /home/lemon/airflow/dags/mydag.py
Traceback (most recent call last):
  File "/home/lemon/airflow/airflowenv/lib/python3.8/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 844, in exec_module
  File "<frozen importlib._bootstrap_external>", line 981, in get_code
  File "<frozen importlib._bootstrap_external>", line 911, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/lemon/airflow/dags/mydag.py", line 17
    
    ^
SyntaxError: unexpected EOF while parsing
[2022-07-28 19:54:41,367] {processor.py:653} WARNING - No viable dags retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:54:41,387] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.031 seconds
[2022-07-28 19:55:12,140] {processor.py:153} INFO - Started process (PID=2566) to work on /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:55:12,141] {processor.py:641} INFO - Processing file /home/lemon/airflow/dags/mydag.py for tasks to queue
[2022-07-28 19:55:12,142] {logging_mixin.py:115} INFO - [2022-07-28 19:55:12,142] {dagbag.py:507} INFO - Filling up the DagBag from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:55:12,143] {logging_mixin.py:115} INFO - [2022-07-28 19:55:12,143] {dagbag.py:320} ERROR - Failed to import: /home/lemon/airflow/dags/mydag.py
Traceback (most recent call last):
  File "/home/lemon/airflow/airflowenv/lib/python3.8/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 844, in exec_module
  File "<frozen importlib._bootstrap_external>", line 981, in get_code
  File "<frozen importlib._bootstrap_external>", line 911, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/lemon/airflow/dags/mydag.py", line 17
    
    ^
SyntaxError: unexpected EOF while parsing
[2022-07-28 19:55:12,143] {processor.py:653} WARNING - No viable dags retrieved from /home/lemon/airflow/dags/mydag.py
[2022-07-28 19:55:12,156] {processor.py:161} INFO - Processing /home/lemon/airflow/dags/mydag.py took 0.018 seconds
